fixes overflow issue

--- a/style.css
+++ b/style.css
@@ -1,5 +1,6 @@
 html{
     scrollbar-color: var(--secondary) var(--primary) ;
+    overflow-x: hidden;
 }
 
 * {
